test/1.4/errors/T_WPRAGMA.dml
/*
  © 2024 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.4;

device test;

// no warning
/*% COVERITY irrelevant %*/

/// WARNING WPRAGMA
/*% MYVERYCOOLPRAGMA %*/
